force-app/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
  <label>Item</label>
  <pluralLabel>Items</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Item Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>