force-app/main/default/objects/Item__c/fields/Description__c.field-meta.xml
<CustomField>
  <fullName>Description__c</fullName>
  <label>Description</label>
  <type>Text</type>
  <length>255</length>
</CustomField>