force-app/main/default/objects/Item__c/fields/Family__c.field-meta.xml
<CustomField>
  <fullName>Family__c</fullName>
  <label>Family</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Laptops</fullName><default>true</default></value>
      <value><fullName>Phones</fullName><default>false</default></value>
      <value><fullName>Headphones</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>