force-app/main/default/objects/Item__c/fields/Type__c.field-meta.xml
<CustomField>
  <fullName>Type__c</fullName>
  <label>Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Standard</fullName><default>false</default></value>
      <value><fullName>Pro</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>